# rageveil

./: CLAUDE.md  Cargo.toml  flake.nix  rust-toolchain.toml
contrib/zsh/completions/: _rageveil
crates/rageveil/: Cargo.toml
crates/rageveil/src/: main.rs
crates/rageveil_core/: Cargo.toml
crates/rageveil_core/src/: addressbook.rs  config.rs  content.rs  dsl.rs  git.rs  index.rs  lib.rs  live.rs  metadata.rs  plan.rs  store.rs  sugar.rs  types.rs
crates/rageveil_core/src/commands/: address.rs  allow.rs  delete.rs  deny.rs  edit.rs  info.rs  init.rs  insert.rs  list.rs  mod.rs  search.rs  show.rs  sync.rs
crates/rageveil_core/tests/: address_book.rs  delete_flow.rs  dumb_remote_shell.rs  edit.rs  git_sync.rs  git_sync_diverge.rs  info.rs  lightweight_node_shell.rs  multi_recipient.rs  plan_render.rs  ragenix_interop.rs  round_trip.rs  search.rs  sharing.rs  ssh_comment_sharing.rs
crates/rageveil_core/tests/common/: mod.rs
ops/gitolite-lite/: README.md  bootstrap.sh  deploy.sh  post-receive  pre-receive  rageveil-shell  rageveil-sync-keys
