[package]
name = "rageveil_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tagless-final core for rageveil — a git+age password manager."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
age = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
